# universal_robot

./: README.md
universal_robot/: package.xml
ur3_moveit_config/config/: kinematics.yaml
ur3_moveit_config/launch/: moveit.rviz
ur3_moveit_config/script/: .numpy_test.py.swp  1_first_sidecut_N.txt  2_second_sidecut_N.txt  3_centercut_N.txt  axis_move_test.py  moveit_test.py  numpy_test.py
ur3_moveit_config/script/brT/: 1_first_sidecut_T1.txt  1_sidecut_T1.txt  2_second_sidecut_T1.txt  3_centercut_T1.txt
ur_description/meshes/ur3/visual/: box.blend  box.blend1  box.stl  spindle.blend  spindle.blend1  spindle.stl
ur_description/urdf/: ur3.urdf.xacro  ur3_joint_limited_robot.urdf.xacro  ur3_robot.urdf.xacro
ur_gazebo_plugins/: CMakeLists.txt  package.xml
ur_gazebo_plugins/include/ur_gazebo_plugins/: InitialPosePlugin.h
ur_gazebo_plugins/src/: InitialPosePlugin.cpp
