<?xml version="1.0"?>
<package>
  <name>ur_gazebo_plugins</name>
  <version>0.0.0</version>
  <description>The ur_gazebo_plugins package</description>

  <author email="fadri.furrer@mavt.ethz.ch">Fadri Furrer</author>
  <author email="yoshida@arch.ethz.ch">Yoshida Hironori</author>
  <author email="martiwer@mavt.ethz.ch">Martin Wermelinger</author>
  <maintainer email="martiwer@mavt.ethz.ch">Martin Wermelinger</maintainer>

  <license>TODO</license>

  <buildtool_depend>catkin</buildtool_depend>


  <build_depend>gazebo_plugins</build_depend>

  <run_depend>gazebo_plugins</run_depend>

</package>
